examples/test/testpolicy119.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy119
  namespace: namespace96
spec:
  podSelector:
    matchLabels:
      key32: value27
      key44: value17
      key20: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value30
      podSelector:
        matchLabels:
          key48: value43
          key44: value32
          key20: value27
